--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,8 @@ itsdangerous==2.0.1
 MarkupSafe==2.0.1
 numpy==2.2.3
 requests==2.31.0
+PyPDF2==3.0.1
+python-docx==1.1.0
+openpyxl==3.1.2
+python-dotenv==1.0.0
+openai==1.12.0
